--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             <a href="mailto:dev@javad.tech">dev@javad.tech</a>
         </br></br>
             <nav class="footer-social-links">
-                <a href="https://github.com/Ja7adR" class="social-link"><i class="mdi mdi-github-circle"></i></a>
-                <a href="https://t.me/Ja7adR" class="social-link"><i class="mdi mdi-send"></i></a>
-                <a href="https://twitter.com/Ja7adR" class="social-link"><i class="mdi mdi-twitter"></i></a>
-                <a href="https://instagram.com/Ja7adR" class="social-link"><i class="mdi mdi-instagram"></i></a>
+                <a href="https://github.com/Ja7adR" class="social-link" alt="Github"><i class="mdi mdi-github-circle"></i></a>
+                <a href="https://t.me/Ja7adR" class="social-link" alt="Telegram"><i class="mdi mdi-send"></i></a>
+                <a href="https://twitter.com/Ja7adR" class="social-link" alt="Twitter"><i class="mdi mdi-twitter"></i></a>
+                <a href="https://instagram.com/Ja7adR" class="social-link" alt="Intagram"><i class="mdi mdi-instagram"></i></a>
             </nav>
         </div>
     </main>
