Resume download link fixed

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <div class="col-lg-8 col-md-7 text-center text-md-start">
         <h2 class="h1 mt-2" data-aos="fade-left" data-aos-delay="0">Javad Rajabzade</h2>
         <p data-aos="fade-left" data-aos-delay="100">{ Senior Back-end Developer } | { UI/UX Designer }</p>
-        <div class="d-print-none" data-aos="fade-left" data-aos-delay="200"><a class="btn btn-light text-dark shadow-sm mt-1 me-1" href="resume/Javad.pdf" target="_blank">Download Resume PDF</a><a class="btn btn-success shadow-sm mt-1" href="https://github.com/Ja7adR">Github Profile</a></div>
+        <div class="d-print-none" data-aos="fade-left" data-aos-delay="200"><a class="btn btn-light text-dark shadow-sm mt-1 me-1" href="https://raw.githubusercontent.com/Ja7adR/Ja7adR.github.io/main/resume/Javad.pdf" target="_blank">Download Resume PDF</a><a class="btn btn-success shadow-sm mt-1" href="https://github.com/Ja7adR">Github Profile</a></div>
       </div>
     </div>
   </div>
