fixed work expriance

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         <div class="card-body">
           <div class="h5 mb-1">Back-end Developer and Graphic Designer <span class="text-muted h6">at MoeinSoft < moeinsoft.com ></moeinsoft.com></span></div>
           <div class="text-muted text-small mb-2">Nov, 2017 - Present</div>
-          <div>Moein Accounting Software develop, Anti-Ransomware Moein, MoeinBackup, Setup Experience Devlop with InstallAware</div>
+          <div>Moein Accounting Software, Anti-Ransomware Moein, MoeinBackup develop, Setup Experience Devlop with InstallAware, Linux administration</div>
         </div>
       </div>
     </div>
