--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <div class="row">
       <div class="col-md-6">
         <h2 class="h3 mb-3">About Me</h2>
-        <p>Hello! I’m Javad Rajabzade. I am Senior back-end Developer about Backend programming and UI/UX design. I am a skilled Back-end Developer and Expert of Graphic Design tools such as Photoshop and Adobe XD.</p>
+        <p>Hello! I’m Javad Rajabzade. I am Senior back-end Developer about Back-end, Microservice programming and UI/UX design. I am a skilled Back-end Developer and Expert of Graphic Design tools such as Photoshop and Adobe XD.</p>
       </div>
       <div class="col-md-5 offset-md-1">
         <div class="row mt-2">
