--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Javad Rajabzade Profilo Senior Back-end Developer , UI/UX Designer">
+    <meta name="keywords" content="Back-End, Developer, Programmer, go, golang, python, docker, c, delphi, UI/UX">
+    <meta name="author" content="Javad Rajabzade">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Javad Rajabzade</title>
     <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
