--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                 </li>
                 <li class="nav-item"><a class="nav-link" href="https://www.instagram.com/Ja7adR" title="Instagram"><i class="fab fa-instagram"></i><span class="menu-title sr-only">Instagram</span></a>
                 </li>
-                <li class="nav-item"><a class="nav-link" href="https://github.com/Ja7adR" title="Github"><i class="fab fa-github"></i><span class="menu-title sr-only">Github</span></a>
+                <li class="nav-item"><a class="nav-link" href="https://github.com/Ja7ad" title="Github"><i class="fab fa-github"></i><span class="menu-title sr-only">Github</span></a>
                 </li>
               </ul>
             </nav>
