--- a/index.html
+++ b/index.html
@@ -65,12 +65,19 @@
       </div>
     </div>
   </div>
+  
+    <div class="alert alert-success">
+  <strong>Security Tips : </strong> <a href="https://javad.tech/AntiLeak/" target="_blank">How Prevent leak your privacy on web with <b>AntiLeak</b>? </a>
+</div>
   <div class="about-section pt-4 px-3 px-lg-4 mt-1">
     <div class="row">
       <div class="col-md-6">
         <h2 class="h3 mb-3">About Me</h2>
         <p>Hello! I’m Javad Rajabzade. Back-end, Microservice programming and UI/UX design are some of my specialties. An expert in Graphic Design tools like Photoshop and Adobe XD, I am a skilled Back-end Developer.</p>
+        
+       
 	    </div>
+	  
       <div class="col-md-5 offset-md-1">
         <div class="row mt-2">
           <div class="col-sm-4">
