fixed top margin avatar

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   </div>
   
     <div class="alert alert-success">
-  <strong>Security Tips : </strong> <a href="https://javad.tech/AntiLeak/" target="_blank">How Prevent leak your privacy on web with <b>AntiLeak</b>? </a>
+  <strong>Security Tips : </strong> <a href="https://javad.tech/AntiLeak/" target="_blank">How to prevent leak your privacy on web with <b>AntiLeak</b>? </a>
 </div>
   <div class="about-section pt-4 px-3 px-lg-4 mt-1">
     <div class="row">
