--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
   <div class="cover-bg p-3 p-lg-4 text-white">
     <div class="row">
       <div class="col-lg-4 col-md-5">
-        <div class="avatar hover-effect bg-white shadow-sm p-1"><img src="images/avatar.png" width="200" height="200"/></div>
+        <div class="avatar hover-effect bg-white shadow-sm p-1"><img src="images/avatar.png" alt="Javad Rajabzade" width="200" height="200"/></div>
       </div>
       <div class="col-lg-8 col-md-7 text-center text-md-start">
-        <h2 class="h1 mt-2" data-aos="fade-left" data-aos-delay="0">Javad Rajabzade</h2>
+        <h1 class="h1 mt-2" data-aos="fade-left" data-aos-delay="0">Javad Rajabzade</h1>
         <p data-aos="fade-left" data-aos-delay="100">{ Senior Back-end Developer } | { UI/UX Designer }</p>
         <div class="d-print-none" data-aos="fade-left" data-aos-delay="200"><a class="btn btn-light text-dark shadow-sm mt-1 me-1" href="https://raw.githubusercontent.com/Ja7ad/Ja7ad.github.io/main/resume/Javad.pdf" target="_blank">Download Resume PDF</a><a class="btn btn-success shadow-sm mt-1" href="https://github.com/Ja7ad">Github Profile</a></div>
       </div>
