--- a/index.html
+++ b/index.html
@@ -61,14 +61,12 @@
       <div class="col-lg-8 col-md-7 text-center text-md-start">
         <h1 class="h1 mt-2" data-aos="fade-left" data-aos-delay="0">Javad Rajabzade</h1>
         <p data-aos="fade-left" data-aos-delay="100">{ Senior Back-end Developer } | { UI/UX Designer }</p>
-        <div class="d-print-none" data-aos="fade-left" data-aos-delay="200"><a class="btn btn-light text-dark shadow-sm mt-1 me-1" href="https://raw.githubusercontent.com/Ja7ad/Ja7ad.github.io/main/resume/Javad.pdf" target="_blank">Download Resume PDF</a><a class="btn btn-success shadow-sm mt-1" href="https://github.com/Ja7ad">Github Profile</a></div>
+        <div class="d-print-none" data-aos="fade-left" data-aos-delay="200"><a class="btn btn-light text-dark shadow-sm mt-1 me-1" href="https://raw.githubusercontent.com/Ja7ad/Ja7ad.github.io/main/resume/Javad.pdf" target="_blank">Download Resume PDF</a><a class="btn btn-success shadow-sm mt-1" href="https://github.com/Ja7ad">Github Profile</a>
+        <a class="btn btn-info shadow-sm mt-1" href="https://blog.javad.tech">Blog</a>
+        </div>
       </div>
     </div>
   </div>
-  
-    <div class="alert alert-success">
-  <strong>Security Tips : </strong> <a href="https://javad.tech/AntiLeak/" target="_blank">How to prevent leak your privacy on web with <b>AntiLeak</b>? </a>
-</div>
   <div class="about-section pt-4 px-3 px-lg-4 mt-1">
     <div class="row">
       <div class="col-md-6">
