--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
       <div class="timeline-card timeline-card-primary card shadow-sm">
         <div class="card-body">
           <div class="h5 mb-1">Back-end Developer and Graphic Designer <span class="text-muted h6">at MoeinSoft < moeinsoft.com ></moeinsoft.com></span></div>
-          <div class="text-muted text-small mb-2">Nov, 2017 - Present</div>
+          <div class="text-muted text-small mb-2">Nov, 2017 - Apr, 2021</div>
           <div>Moein Accounting Software, Anti-Ransomware Moein, MoeinBackup develop, Setup Experience Devlop with InstallAware, Linux administration</div>
         </div>
       </div>
