--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </div>
       <div class="col-lg-8 col-md-7 text-center text-md-start">
         <h1 class="h1 mt-2" data-aos="fade-left" data-aos-delay="0">Javad Rajabzade</h1>
-        <p data-aos="fade-left" data-aos-delay="100">{ Senior Back-end Developer } | { UI/UX Designer }</p>
+        <p data-aos="fade-left" data-aos-delay="100">Software Engineer</p>
         <div class="d-print-none" data-aos="fade-left" data-aos-delay="200"><a class="btn btn-light text-dark shadow-sm mt-1 me-1" href="https://raw.githubusercontent.com/Ja7ad/Ja7ad.github.io/main/resume/Javad.pdf" target="_blank">Download Resume PDF</a><a class="btn btn-success shadow-sm mt-1" href="https://github.com/Ja7ad">Github Profile</a>
         <a class="btn btn-info shadow-sm mt-1" href="https://blog.javad.tech">Blog</a>
         </div>
@@ -71,7 +71,7 @@
     <div class="row">
       <div class="col-md-6">
         <h2 class="h3 mb-3">About Me</h2>
-        <p>Hello! I’m Javad Rajabzade. Back-end, Microservice programming and UI/UX design are some of my specialties. An expert in Graphic Design tools like Photoshop and Adobe XD, I am a skilled Back-end Developer.</p>
+        <p>Hello! I’m Javad Rajabzade. Software Engineer, Back-end, Microservice programming and UI/UX design are some of my specialties. An expert in Graphic Design tools like Photoshop and Adobe XD, I am a skilled Back-end Developer.</p>
         
        
 	    </div>
@@ -192,7 +192,25 @@
     <div class="timeline">
       <div class="timeline-card timeline-card-primary card shadow-sm">
         <div class="card-body">
-          <div class="h5 mb-1">Back-end Developer and Graphic Designer <span class="text-muted h6">at MoeinSoft < moeinsoft.com ></moeinsoft.com></span></div>
+          <div class="h5 mb-1">Software Engineer<span class="text-muted h6"> at Mawson INC</span></div>
+          <div class="text-muted text-small mb-2">Apr, 2021 - Now</div>
+          <div>Knowledge of the Filecoin network and implementation of the Filecoin Lotus optimisation</div>
+        </div>
+      </div>
+    </div>
+    <div class="timeline">
+      <div class="timeline-card timeline-card-primary card shadow-sm">
+        <div class="card-body">
+          <div class="h5 mb-1">Back-end Developer<span class="text-muted h6"> at Wzor Group < twitter.com/WZorNET ></span></div>
+          <div class="text-muted text-small mb-2">Sep, 2009 - Now</div>
+          <div>KMS Emulator service design with ratiborus58, MPK (Microsoft product key share service), PID Key Checker 3.0.0</div>
+        </div>
+      </div>
+    </div>
+    <div class="timeline">
+      <div class="timeline-card timeline-card-primary card shadow-sm">
+        <div class="card-body">
+          <div class="h5 mb-1">Back-end Developer and Graphic Designer <span class="text-muted h6"> at MoeinSoft < moeinsoft.com ></span></div>
           <div class="text-muted text-small mb-2">Nov, 2017 - Apr, 2021</div>
           <div>Moein Accounting Software, Anti-Ransomware Moein, MoeinBackup develop, Setup Experience Devlop with InstallAware, Linux administration</div>
         </div>
