--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         <div class="card-body">
           <div class="h5 mb-1">Software Engineer<span class="text-muted h6"> at Mawson INC</span></div>
           <div class="text-muted text-small mb-2">Apr, 2021 - Now</div>
-          <div>Knowledge of the Filecoin network and implementation of the Filecoin Lotus optimisation</div>
+          <div>Knowledge Blockchain of the Filecoin network and implementation of the Filecoin Lotus optimization</div>
         </div>
       </div>
     </div>
