--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
         <div class="card-body">
           <div class="h5 mb-1">Back-end Developer<span class="text-muted h6"> at Wzor Group < twitter.com/WZorNET ></span></div>
           <div class="text-muted text-small mb-2">Sep, 2009 - Now</div>
-          <div>KMS Emulator service design with ratiborus58, MPK (Microsoft product key share service), PID Key Checker 3.0.0</div>
+          <div>The KMS Emulator service is designed with Ratiborus58, MPK (Microsoft product key share service), and PID Key Checker 3.0.0</div>
         </div>
       </div>
     </div>
@@ -212,7 +212,7 @@
         <div class="card-body">
           <div class="h5 mb-1">Back-end Developer and Graphic Designer <span class="text-muted h6"> at MoeinSoft < moeinsoft.com ></span></div>
           <div class="text-muted text-small mb-2">Nov, 2017 - Apr, 2021</div>
-          <div>Moein Accounting Software, Anti-Ransomware Moein, MoeinBackup develop, Setup Experience Devlop with InstallAware, Linux administration</div>
+          <div>Moein Accounting Software, Anti-Ransomware Moein, MoeinBackup Development, Experience with InstallAware, Linux Administration</div>
         </div>
       </div>
     </div>
