--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <h1 class="h1 mt-2" data-aos="fade-left" data-aos-delay="0">Javad Rajabzade</h1>
         <p data-aos="fade-left" data-aos-delay="100">Software Engineer</p>
         <div class="d-print-none" data-aos="fade-left" data-aos-delay="200"><a class="btn btn-light text-dark shadow-sm mt-1 me-1" href="https://raw.githubusercontent.com/Ja7ad/Ja7ad.github.io/main/resume/Javad.pdf" target="_blank">Download Resume PDF</a><a class="btn btn-success shadow-sm mt-1" href="https://github.com/Ja7ad">Github Profile</a>
-        <a class="btn btn-info shadow-sm mt-1" href="https://blog.javad.tech">Blog</a>
+        <a class="btn btn-info shadow-sm mt-1" href="https://dev.to/Ja7ad">Blog Javad in Dev.to</a>
         </div>
       </div>
     </div>
