--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
     <div class="timeline">
       <div class="timeline-card timeline-card-primary card shadow-sm">
         <div class="card-body">
-          <div class="h5 mb-1">Software Engineer<span class="text-muted h6"> at Mawson INC</span></div>
+          <div class="h5 mb-1">Software Engineer<span class="text-muted h6"></span></div>
           <div class="text-muted text-small mb-2">Apr, 2021 - Now</div>
           <div>Knowledge Blockchain of the Filecoin network and implementation of the Filecoin Lotus optimization</div>
         </div>
