Updated About me

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <div class="row">
       <div class="col-md-6">
         <h2 class="h3 mb-3">About Me</h2>
-        <p>Hello! I’m Javad Rajabzade. Software Engineer, Back-end, Microservice programming and UI/UX design are some of my specialties. An expert in Graphic Design tools like Photoshop and Adobe XD, I am a skilled Back-end Developer.</p>
+        <p>I'm a Software Engineer experienced in Microservice, Clean Architecture, and Infrastructure. I have expertise in a wide range of IT disciplines, with a focus on Systems Analysis, Design, Development, and Implementation of various applications.</p>
         
        
 	    </div>
@@ -262,8 +262,6 @@
       </div>
       <div class="col">
         <div class="mt-2">
-          <h3 class="h6">Address</h3>
-          <div class="pb-2 text-secondary">Floor 1, No 73, 20.4 Azadeh Street, Mashhad, Khorasan Razavi, Iran</div>
           <h3 class="h6">Phone</h3>
           <div class="pb-2 text-secondary">+98935-773-8933</div>
 		  <div class="pb-2 text-secondary">+98910-659-5127</div>
