--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
                 </li>
                 <li class="nav-item"><a class="nav-link" href="https://www.instagram.com/Ja7adR" title="Instagram"><i class="fab fa-instagram"></i><span class="menu-title sr-only">Instagram</span></a>
                 </li>
+                <li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/in/ja7ad/" title="linkedin"><i class="fab fa-linkedin"></i><span class="menu-title sr-only">Linkedin</span></a>
+                </li>
                 <li class="nav-item"><a class="nav-link" href="https://github.com/Ja7ad" title="Github"><i class="fab fa-github"></i><span class="menu-title sr-only">Github</span></a>
                 </li>
               </ul>
@@ -61,8 +63,8 @@
       <div class="col-lg-8 col-md-7 text-center text-md-start">
         <h1 class="h1 mt-2" data-aos="fade-left" data-aos-delay="0">Javad Rajabzade</h1>
         <p data-aos="fade-left" data-aos-delay="100">Software Engineer</p>
-        <div class="d-print-none" data-aos="fade-left" data-aos-delay="200"><a class="btn btn-light text-dark shadow-sm mt-1 me-1" href="https://raw.githubusercontent.com/Ja7ad/Ja7ad.github.io/main/resume/Javad.pdf" target="_blank">Download Resume PDF</a><a class="btn btn-success shadow-sm mt-1" href="https://github.com/Ja7ad">Github Profile</a>
-        <a class="btn btn-info shadow-sm mt-1" href="https://dev.to/Ja7ad">Blog Javad in Dev.to</a>
+        <div class="d-print-none" data-aos="fade-left" data-aos-delay="200"><a class="btn btn-light text-dark shadow-sm mt-1 me-1" href="https://raw.githubusercontent.com/Ja7ad/Ja7ad.github.io/main/resume/Javad.pdf" target="_blank">Download Resume</a><a class="btn btn-success shadow-sm mt-1" href="https://github.com/Ja7ad">Github Profile</a>
+          <a class="btn btn-warning shadow-sm mt-1" href="https://www.linkedin.com/in/ja7ad/">Linkedin</a> <a class="btn btn-info shadow-sm mt-1" href="https://dev.to/Ja7ad">Blog Dev.to</a>
         </div>
       </div>
     </div>
@@ -163,7 +165,7 @@
             <div class="progress-bar bg-success" role="progressbar" data-aos="zoom-in-right" data-aos-delay="400" data-aos-anchor=".skills-section" style="width: 80%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
           </div>
         </div>
-        <div class="mb-2"><span>Docker</span>
+        <div class="mb-2"><span>Infrastructure Docker, Kubernetes, PaaS and SaaS</span>
           <div class="progress my-1">
             <div class="progress-bar bg-success" role="progressbar" data-aos="zoom-in-right" data-aos-delay="400" data-aos-anchor=".skills-section" style="width: 80%" aria-valuenow="91" aria-valuemin="0" aria-valuemax="100"></div>
           </div>
@@ -173,9 +175,9 @@
             <div class="progress-bar bg-success" role="progressbar" data-aos="zoom-in-right" data-aos-delay="600" data-aos-anchor=".skills-section" style="width: 75%" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"></div>
           </div>
         </div>
-        <div class="mb-2"><span>Delphi</span>
+        <div class="mb-2"><span>Microservice</span>
           <div class="progress my-1">
-            <div class="progress-bar bg-success" role="progressbar" data-aos="zoom-in-right" data-aos-delay="600" data-aos-anchor=".skills-section" style="width: 75%" aria-valuenow="48" aria-valuemin="0" aria-valuemax="100"></div>
+            <div class="progress-bar bg-success" role="progressbar" data-aos="zoom-in-right" data-aos-delay="600" data-aos-anchor=".skills-section" style="width: 85%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
           </div>
         </div>
         <div class="mb-2"><span>MYSQL/SQL Server/SQL Language</span>
@@ -217,6 +219,43 @@
       </div>
     </div>
   </div>
+
+  <hr class="d-print-none"/>
+  <div class="page-break"></div>
+  <div class="certificate-section px-3 px-lg-4 pb-4">
+    <h2 class="h3 mb-4">Certificate</h2>
+    <div class="timeline">
+      <div class="timeline-card timeline-card-cert card shadow-sm">
+        <div class="card-body">
+          <div class="h5 mb-1">Backend Development in 2021 with Python, Django, SQLite3, Heroku, GIT</div>
+          <div class="text-muted text-small mb-2">2020 Dec</div>
+          <div><a href="https://www.udemy.com/certificate/UC-bdb3a893-2b94-4bd8-ac00-2e3d579b26db/" target="blank">Backend Development in 2021 with Python, Django, SQLite3, Heroku, GIT</a></div>
+        </div>
+      </div>
+      <div class="timeline-card timeline-card-cert card shadow-sm">
+        <div class="card-body">
+          <div class="h5 mb-1">MYSQL Master</div>
+          <div class="text-muted text-small mb-2">2021 April</div>
+          <div><a href="https://www.udemy.com/certificate/UC-cfba71fa-2868-4dad-817e-63c207cfaa0f/" target="blank">MYSQL Master</a></div>
+        </div>
+      </div>
+      <div class="timeline-card timeline-card-cert card shadow-sm">
+        <div class="card-body">
+          <div class="h5 mb-1">Cyber Security and Ethical Hacking introduction Certificate</div>
+          <div class="text-muted text-small mb-2">2020 Sep</div>
+          <div><a href="https://www.udemy.com/certificate/UC-40890c72-3f09-4db0-86f7-f4793b5bd36d/" target="blank">Cyber Security and Ethical Hacking introduction Certificate</a></div>
+        </div>
+      </div>
+      <div class="timeline-card timeline-card-cert card shadow-sm">
+        <div class="card-body">
+          <div class="h5 mb-1">Adobe XD: UI & UX Design with 14 real world project 2020</div>
+          <div class="text-muted text-small mb-2">2020 May</div>
+          <div><a href="https://www.udemy.com/certificate/UC-b776555f-7de8-49a3-bf9f-285fe9cd739f/" target="blank">Adobe XD: UI & UX Design with 14 real world project 2020</a></div>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <hr class="d-print-none"/>
   <div class="page-break"></div>
   <div class="education-section px-3 px-lg-4 pb-4">
@@ -238,6 +277,7 @@
       </div>
     </div>
   </div>
+
   <hr class="d-print-none"/>
   <div class="contant-section px-3 px-lg-4 pb-4" id="contact">
     <h2 class="h3 text mb-3">Contact</h2>
@@ -286,6 +326,8 @@
                 <li class="nav-item"><a class="nav-link" href="https://twitter.com/Ja7adR" title="Twitter"><i class="fab fa-twitter"></i><span class="menu-title sr-only">Twitter</span></a>
                 </li>
                 <li class="nav-item"><a class="nav-link" href="https://www.instagram.com/Ja7adR" title="Instagram"><i class="fab fa-instagram"></i><span class="menu-title sr-only">Instagram</span></a>
+                </li>
+                <li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/in/ja7ad/" title="linkedin"><i class="fab fa-linkedin"></i><span class="menu-title sr-only">Linkedin</span></a>
                 </li>
                 <li class="nav-item"><a class="nav-link" href="https://github.com/Ja7ad" title="Github"><i class="fab fa-github"></i><span class="menu-title sr-only">Github</span></a>
                 </li>
