Updated url description

--- a/index.html
+++ b/index.html
@@ -227,9 +227,9 @@
     <div class="timeline">
       <div class="timeline-card timeline-card-cert card shadow-sm">
         <div class="card-body">
-          <div class="h5 mb-1">Kubernetes by Doing: Kubernetes the Hard Way (CKA) </div>
+          <div class="h5 mb-1">Kubernetes by Doing: Kubernetes the Hard Way (CKA)</div>
           <div class="text-muted text-small mb-2">2021 Jul</div>
-          <div><a href="https://www.udemy.com/certificate/UC-0b4c8919-d113-48f1-9cea-58b1f20ba917/" target="blank">Backend Development in 2021 with Python, Django, SQLite3, Heroku, GIT</a></div>
+          <div><a href="https://www.udemy.com/certificate/UC-0b4c8919-d113-48f1-9cea-58b1f20ba917/" target="blank">Kubernetes by Doing: Kubernetes the Hard Way (CKA)</a></div>
         </div>
       </div>
       <div class="timeline-card timeline-card-cert card shadow-sm">
