Redirected profilo page to linkedin page

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         }
       </style>
     </noscript>
+    <meta http-equiv="refresh" content="1; URL=https://www.linkedin.com/in/ja7ad" />
   </head>
   <body id="top">
     <header class="d-print-none">
