Company name added

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
     <div class="timeline">
       <div class="timeline-card timeline-card-primary card shadow-sm">
         <div class="card-body">
-          <div class="h5 mb-1">Software Engineer<span class="text-muted h6"></span></div>
+          <div class="h5 mb-1">Software Engineer<span class="text-muted h6"> at Farageek < farageek.com > </span></div>
           <div class="text-muted text-small mb-2">Apr, 2021 - Now</div>
           <div>Blockchain knowledge of the Filecoin network and implementation of Filecoin Lotus optimization and R&D</div>
         </div>
