--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <div class="row">
       <div class="col-md-6">
         <h2 class="h3 mb-3">About Me</h2>
-        <p>Javad has over 7 years of experience in software development. He have expertise in a wide range of IT disciplines, with a focus on Systems Analysis, Design, Development, and Implementation of various applications. He has over 2 years of experience with Microservice Architecture, Clean Architecture, Master-Slave Architecture and Infrastructure.</p>
+        <p>Javad has over 7 years of experience in software development. He has expertise in a wide range of IT disciplines, with a focus on Systems Analysis, Design, Development, and Implementation of various applications. He has over 2 years of experience with Microservice Architecture, Clean Architecture, Master-Slave Architecture, and Infrastructure.</p>
         
        
 	    </div>
