--- a/unminify.html
+++ b/unminify.html
@@ -27,6 +27,7 @@
         }
       </style>
     </noscript>
+        <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
   </head>
   <body id="top">
     <header class="d-print-none">
@@ -79,34 +80,7 @@
 	    </div>
 	  
       <div class="col-md-5 offset-md-1">
-        <div class="row mt-2">
-          <div class="col-sm-4">
-            <div class="pb-1">Age</div>
-          </div>
-          <div class="col-sm-8">
-            <div class="pb-1 text-secondary">28</div>
-          </div>
-          <div class="col-sm-4">
-            <div class="pb-1">Email</div>
-          </div>
-          <div class="col-sm-8">
-            <div class="pb-1 text-secondary">ja7ad@live.com</div>
-          </div>
-          <div class="col-sm-4">
-            <div class="pb-1">Phone</div>
-          </div>
-          <div class="col-sm-8">
-            <div class="pb-1 text-secondary">+98935-773-8933</div>
-          </div>
-          <div class="col-sm-4">
-            <div class="pb-1">Phone 2</div>
-          </div>
-          <div class="col-sm-8">
-            <div class="pb-1 text-secondary">+98910-659-5127</div>
-          </div>
-        </div>
-      </div>
-    </div>
+<div class="badge-base LI-profile-badge" data-locale="en_US" data-size="large" data-theme="light" data-type="VERTICAL" data-vanity="ja7ad" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://ir.linkedin.com/in/ja7ad?trk=profile-badge">Javad Rajabzade</a></div>
   </div>
   
 
