--- a/unminify.html
+++ b/unminify.html
@@ -80,7 +80,7 @@
 	    </div>
 	  
       <div class="col-md-5 offset-md-1">
-<div class="badge-base LI-profile-badge" data-locale="en_US" data-size="large" data-theme="light" data-type="VERTICAL" data-vanity="ja7ad" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://ir.linkedin.com/in/ja7ad?trk=profile-badge">Javad Rajabzade</a></div>
+<div class="badge-base LI-profile-badge" data-locale="en_US" data-size="large" data-theme="light" data-type="VERTICAL" data-vanity="ja7ad" data-version="v1"></div>
   </div>
   
 
