--- a/unminify.html
+++ b/unminify.html
@@ -113,7 +113,7 @@
 		  <div class="pb-2 text-secondary">+98910-659-5127</div>
 		  <div class="pb-2 text-secondary">+98998-100-2701</div>
           <h3 class="h6">Email</h3>
-          <div class="pb-2 text-secondary">dev@javad.tech</div>
+          <div class="pb-2 text-secondary">ja7ad@live.com</div>
 		  <div class="pb-2 text-secondary">ja7adr@gmail.com</div>
         </div>
       </div>
