--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       </div>
       <div class="col-lg-8 col-md-7 text-center text-md-start">
         <h1 class="h1 mt-2" data-aos="fade-left" data-aos-delay="0">Javad Rajabzade</h1>
-        <p data-aos="fade-left" data-aos-delay="100">Software Engineer & Linux SysAdmin</p>
+        <p data-aos="fade-left" data-aos-delay="100">Senior Golang Engineer & Linux SysAdmin</p>
         <div class="d-print-none" data-aos="fade-left" data-aos-delay="200"> <a class="btn btn-success shadow-sm mt-1" href="https://github.com/Ja7ad">Github Profile</a>
           <a class="btn btn-info shadow-sm mt-1" href="https://dev.to/Ja7ad">Blog Dev.to</a> <a class="btn btn-light text-dark shadow-sm mt-1 me-1" href="https://raw.githubusercontent.com/Ja7ad/Ja7ad.github.io/main/resume/Javad.pdf" target="_blank">Download Resume</a>
         </div>
