--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link href="css/bootstrap.min.css?ver=1.2.0" rel="stylesheet">
     <link href="css/aos.css?ver=1.2.0" rel="stylesheet">
     <link href="css/main.css?ver=1.2.0" rel="stylesheet">
+    <script src="scripts/bootstrap.bundle.min.js?ver=1.2.0"></script>
     <noscript>
       <style type="text/css">
         [data-aos] {
