--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
     <link href="css/bootstrap.min.css?ver=1.2.0" rel="stylesheet">
     <link href="css/aos.css?ver=1.2.0" rel="stylesheet">
     <link href="css/main.css?ver=1.2.0" rel="stylesheet">
-    <script src="scripts/bootstrap.bundle.min.js?ver=1.2.0"></script>
     <noscript>
       <style type="text/css">
         [data-aos] {
@@ -145,5 +144,8 @@
         </div>
       </div>
     </footer>
+	    <script src="scripts/bootstrap.bundle.min.js?ver=1.2.0"></script>
+    <script src="scripts/aos.js?ver=1.2.0"></script>
+    <script src="scripts/main.js?ver=1.2.0"></script>
   </body>
 </html>
