--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel='shortcut icon' type='image/x-icon' href='./favicon.ico' />
 
   <title>Javad Rajabzadeh</title>
-  <meta name="description" content="Javad Rajabzadeh Profilo Senior Golang Engineer">
+  <meta name="description" content="Javad Rajabzadeh Profilo Senior Software Engineer">
   <meta name="keywords" content="Back-End, Developer, Programmer, go, golang, python, docker, microservice, software-architecture">
   <meta name="author" content="Javad Rajabzadeh">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
@@ -38,7 +38,7 @@
 
     <div class="profile-card__cnt js-profile-cnt">
       <div class="profile-card__name">Javad Rajabzadeh</div>
-      <div class="profile-card__txt">Senior Golang Engineer (<strong>Gopher Developer</strong>)</div>
+      <div class="profile-card__txt">Senior Software Engineer</div>
 	    <p style="font-size:12px;">As a seasoned IT professional with over 9 years of experience in software development, I possess a wide range of expertise across various IT disciplines. My primary focus is on system analysis, design, development, and implementation of diverse applications. Additionally, I have significant experience in infrastructure architecture.</p>  
 	    <p style="font-size:12px;">Throughout my career, I have consistently demonstrated a strong ability to deliver outstanding results through effective leadership, strategic thinking, and innovative problem-solving. With a keen eye for detail and an unwavering commitment to quality, I am dedicated to delivering projects that meet and exceed client expectations.</p>  
     </br>
