doc: add f6s profile

--- a/index.html
+++ b/index.html
@@ -74,6 +74,12 @@
               <svg class="icon"><use xlink:href="#icon-google"></use></svg>
           </span>
         </a>
+        
+         <a href="https://www.f6s.com/ja7ad" class="profile-card-social__item f6s" target="_blank" alt="F6S">
+          <span class="icon-font">
+              <svg class="icon"><use xlink:href="#icon-f6s"></use></svg>
+          </span>
+        </a>
 
       </div>
 
@@ -117,11 +123,14 @@
       <path d="M15.545 6.558a9.42 9.42 0 0 1 .139 1.626c0 2.434-.87 4.492-2.384 5.885h.002C11.978 15.292 10.158 16 8 16A8 8 0 1 1 8 0a7.689 7.689 0 0 1 5.352 2.082l-2.284 2.284A4.347 4.347 0 0 0 8 3.166c-2.087 0-3.86 1.408-4.492 3.304a4.792 4.792 0 0 0 0 3.063h.003c.635 1.893 2.405 3.301 4.492 3.301 1.078 0 2.004-.276 2.722-.764h-.003a3.702 3.702 0 0 0 1.599-2.431H8v-3.08h7.545z" fill="white"></path> 
     </symbol>
 
-    <symbol id="icon-dev"  style="color: white" viewBox="0 0 32 32">
-      <title>Dev.to</title>
-      <path d="M60 740 c-19 -19 -20 -33 -20 -340 0 -307 1 -321 20 -340 19 -19 33 -20 440 -20 407 0 421 1 440 20 19 19 20 33 20 340 0 307 -1 321 -20 340 -19 19 -33 20 -440 20 -407 0 -421 -1 -440 -20z m295 -215 c23 -22 25 -31 25 -127 -1 -136 -18 -158 -124 -158 l-56 0 0 155 0 155 65 0 c57 0 69 -3 90 -25z m205 0 c0 -23 -3 -25 -51 -25 l-50 0 3 -37 c3 -33 7 -38 31 -41 21 -3 27 -9 27 -28 0 -20 -5 -24 -30 -24 -28 0 -30 -3 -30 -35 l0 -35 50 0 c49 0 50 -1 50 -30 l0 -30 -63 0 c-36 0 -68 5 -75 12 -13 13 -18 279 -5 291 3 4 37 7 75 7 66 0 68 -1 68 -25z m104 -27 c9 -29 20 -75 27 -101 6 -26 14 -46 16 -43 2 2 11 30 19 63 37 143 32 133 64 133 17 0 30 -2 30 -6 0 -11 -62 -240 -72 -266 -13 -36 -45 -46 -68 -22 -10 11 -32 73 -50 139 -17 66 -33 128 -36 138 -4 13 1 17 25 17 28 0 32 -4 45 -52z"/>
-      <path d="M260 400 c0 -98 1 -100 23 -100 37 0 47 19 47 93 0 80 -11 107 -45 107 -25 0 -25 0 -25 -100z"/>
-    </symbol>
+    <symbol id="icon-f6s" style="color: white" viewBox="0 0 204 204">
+  <title>f6s</title>
+  <path d="M-0.5 102.5c0-0.333 0-0.667 0-1C1.52 56.97 22.853 25.47 63.5 7 113.265-9.075 154.098 3.425 186 44.5c18.194 30.039 21.528 61.705 10 95-18.277 40.769-49.777 61.769-94.5 63C56.777 201.269 25.277 180.269 7 139.5 2.546 127.412 0.046 115.079-0.5 102.5z" fill="#f16c4f"/>
+  <path d="M39.5 46.5h36v14h-21v32h15v14h-15v47h-15V46.5z" fill="#fefffe"/>
+  <path d="M83.5 46.5h32c1 1 2 2 3 3v21h-15v-10h-9v32h21c1 0 2 1 3 2v39c-1 1-2 2-3 3h-31c-2-1-3-3-4-5V51.5c2-2 3-3 5-5z" fill="#fffefe"/>
+  <path d="M130.5 46.5h32c1 1 2 2 3 3v21h-15v-10h-9v32h21c1 0 2 1 3 2v39c-1 1-2 2-3 3h-31c-2-1-3-3-4-5V51.5c2-2 3-3 5-5z" fill="#fefefe"/>
+  <path d="M94.5 106.5h9v34h-9v-34z" fill="#f06c4e"/>
+</symbol>
 
   </defs>
 </svg>
