chore: add disc bot

--- a/index.html
+++ b/index.html
@@ -82,6 +82,10 @@ I possess a multitude of skills with programming languages, database management 
               <h3 class="font-semibold text-lg">Artogenia</h3>
               <p class="text-sm text-gray-300">A creative marketplace for digital and physical arts, powered by Solana NFTs.</p>
             </a>
+                        <a href="https://disc.javad.dev" target="_blank" class="block bg-white bg-opacity-10 p-4 rounded-md hover:bg-opacity-20 transition">
+              <h3 class="font-semibold text-lg">DISC</h3>
+              <p class="text-sm text-gray-300">A ChatGPT-powered bot offering a free DISC personality test.</p>
+            </a>
           </div>
         </div>
 
