fix: project subititle

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ I possess a multitude of skills with programming languages, database management 
           <div class="space-y-4">
             <a href="https://pactus.org" target="_blank" class="block bg-white bg-opacity-10 p-4 rounded-md hover:bg-opacity-20 transition">
               <h3 class="font-semibold text-lg">Pactus Blockchain</h3>
-              <p class="text-sm text-gray-300">A fast, secure, and fully decentralized blockchain built with Go and BFT consensus.</p>
+              <p class="text-sm text-gray-300">A fast, secure, and fully decentralized blockchain built with Go and SSPOS consensus.</p>
             </a>
             <a href="https://pacviewer.com" target="_blank" class="block bg-white bg-opacity-10 p-4 rounded-md hover:bg-opacity-20 transition">
               <h3 class="font-semibold text-lg">PacViewer</h3>
@@ -72,7 +72,7 @@ I possess a multitude of skills with programming languages, database management 
             </a>
             <a href="https://github.com/Ja7ad/fluora" target="_blank" class="block bg-white bg-opacity-10 p-4 rounded-md hover:bg-opacity-20 transition">
               <h3 class="font-semibold text-lg">Floura</h3>
-              <p class="text-sm text-gray-300">A toolset for streaming and analyzing data in real time with high-performance Go modules.</p>
+              <p class="text-sm text-gray-300">A AI toolset for with specific instructions builder.</p>
             </a>
             <a href="https://meilisearch.com" target="_blank" class="block bg-white bg-opacity-10 p-4 rounded-md hover:bg-opacity-20 transition">
               <h3 class="font-semibold text-lg">Meilisearch</h3>
