--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@ I possess a multitude of skills with programming languages, database management 
           </div>
 
           <div class="mt-8 flex gap-4">
-            <a href="https://raw.githubusercontent.com/Ja7ad/Ja7ad.github.io/main/resume/Javad.pdf" class="bg-blue-600 text-white px-6 py-2 rounded-lg hover:bg-blue-700 text-sm font-medium transition">Download Resume</a>
-            <a href="https://bitstack.substack.com/" class="bg-yellow-500 text-white px-6 py-2 rounded-lg hover:bg-yellow-600 text-sm font-medium transition">Visit Blog</a>
+            <a href="https://raw.githubusercontent.com/Ja7ad/Ja7ad.github.io/main/resume/Javad.pdf" class="bg-blue-600 text-white px-6 py-2 rounded-lg hover:bg-blue-700 text-sm font-medium transition">Resume</a>
+            <a href="https://javad.dev/support" class="bg-yellow-500 text-white px-6 py-2 rounded-lg hover:bg-yellow-600 text-sm font-medium transition">Donate</a>
           </div>
         </div>
 
